--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 header {
     background: url('../image/slide3.jpg');
     background-size: cover;
@@ -10,18 +14,159 @@ header {
     height: 100vh;
 }
 
-header div {
+header div{
     padding-top: 10px;
     display: grid;
-    grid-template-columns: 300px 500px;
+    grid-template-columns: 300px 1fr;
     grid-template-rows: 80px;
-    
+    border-bottom: 1px solid #c9c9c9;
 }
 
-header div h1 {
+header div h1{
     border: 4px solid white;
     color: white;
-    font-size: 28px; 
+    font-size: 28px;
     text-transform: uppercase;
     padding: 10px;
+}
+
+header div nav ul {
+    width: 100%;
+    height: 100%;
+    color: white;
+    display: grid;
+    grid-template-columns: 120px 140px 120px 100px 100px ;
+    font-size: 22px;
+    font-weight: bold;
+    list-style: none;
+    justify-content: flex-end;
+    align-content: center;
+}
+
+main section{
+    width: 60%;
+    height: 400px;
+    border: 4px solid black;
+    margin: 20px auto;
+}
+
+main section #div__h2_01{
+    color: #ffa400;
+    letter-spacing: 4px;
+    padding-top: 22px;
+    text-align: center;
+    font-size: 14px;
+}
+
+main section #div__h2_02{
+    font-size: 5rem;
+    text-align: center;
+}
+
+main section hr{
+    width: 120px;
+    margin: 20px auto;
+    border-top: 1px solid black ;
+}
+
+main section p{
+    text-align: center;
+    color: #727272;
+    letter-spacing: 1px;
+    line-height: 28px;
+}
+
+main article{
+    background: url('../image/slide4.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+    padding-top: 6%;
+
+}
+
+main article div{
+    width: 60%;
+    height: 400px;
+    border: 5px solid white;
+    margin: 40px auto 20px auto ;
+
+}
+
+main article #div__h2_03{
+    color: #ffa400;
+    letter-spacing: 4px;
+    padding-top: 22px;
+    text-align: center;
+    font-size: 14px;
+}
+
+main article #div__h2_04{
+    font-size: 5rem;
+    text-align: center;
+    color: blue;
+}
+
+main article hr{
+    width: 120px;
+    margin: 20px auto;
+    border-top: 1px solid white ;
+}
+
+main article div p{
+    text-align: center;
+    color: white;
+    letter-spacing: 1px;
+    line-height: 28px;
+    text-shadow: 2px 2px black;
+    font-size: 20px;
+}
+
+address {
+    margin: 40px auto;
+}
+
+address .col{
+    border: 3px solid black ;
+    height: 300px;
+    padding: 11%;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.bi-envelope, .bi-telephone {
+    color: #ffa400; 
+    font-size: 32px; 
+    font-weight:  bold;
+}
+
+footer {
+    background-color: #717171; 
+}
+
+footer p {
+    color: white; 
+    text-align: center; 
+    font-weight:  bold; 
+    padding-top: 15px;
+}
+
+footer address {
+    color: white; 
+    text-align: center; 
+    -weight:  bold; 
+    margin: 0px; 
+    padding-bottom: 15px;
+}
+
+footer div {
+    width: 50%;
+    margin: 0px auto;
+    text-align: center;
+}
+
+.bi-instagram, .bi-facebook, .bi-twitter{
+    font-size: 24px;
+    color: white;
 }
